--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "vscode-snippets-mobx-react",
     "displayName": "vscode-snippets-mobx-react",
     "description": "a snipperts at mobx react",
-    "version": "0.0.2",
+    "version": "0.0.3",
     "publisher": "qingchong",
     "engines": {
         "vscode": "^1.27.0"
@@ -19,12 +19,14 @@
     ],
     "main": "./extension",
     "contributes": {
-        "commands": [
-            {
-                "command": "extension.sayHello",
-                "title": "Hello World"
-            }
-        ]
+        "contributes": {
+            "snippets": [
+                {
+                    "language": "javascript",
+                    "path": "./snippets/snippets.json"
+                }
+            ]
+        }
     },
     "scripts": {
         "postinstall": "node ./node_modules/vscode/bin/install",
