--- a/package.json
+++ b/package.json
@@ -2,13 +2,14 @@
     "name": "vscode-snippets-mobx-react",
     "displayName": "vscode-snippets-mobx-react",
     "description": "a snipperts at mobx react",
-    "version": "0.0.5",
+    "version": "0.0.6",
     "publisher": "qingchong",
     "engines": {
         "vscode": "^1.27.0"
     },
+    "icon": "images/mobx_logon.png",
     "categories": [
-        "Other"
+        "Snippets"
     ],
     "repository": {
         "type": "git",
