--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
     "name": "vscode-snippets-mobx-react",
-    "displayName": "vscode-snippets-mobx-react",
+    "displayName": "Mobx React Snippets",
     "description": "a snipperts at mobx react",
-    "version": "0.0.7",
+    "version": "0.0.9",
     "publisher": "qingchong",
     "engines": {
-        "vscode": "^1.27.0"
+        "vscode": "0.10.x"
     },
     "icon": "images/mobx_logon.png",
     "categories": [
@@ -15,38 +15,24 @@
         "type": "git",
         "url": "https://github.com/WebCaiQingChong/vscode-snippets-mobx-react"
     },
-    "main": "./extension",
     "contributes": {
-        "contributes": {
-            "snippets": [
-                {
-                    "language": "javascript",
-                    "path": "./snippets/snippets.json"
-                },
-                {
-                    "language": "javascriptreact",
-                    "path": "./snippets/snippets.json"
-                },
-                {
-                    "language": "typescript",
-                    "path": "./snippets/snippets.json"
-                },
-                {
-                    "language": "typescriptreact",
-                    "path": "./snippets/snippets.json"
-                }
-            ]
-        }
-    },
-    "scripts": {
-        "postinstall": "node ./node_modules/vscode/bin/install",
-        "test": "node ./node_modules/vscode/bin/test"
-    },
-    "devDependencies": {
-        "typescript": "^2.6.1",
-        "vscode": "^1.1.21",
-        "eslint": "^4.11.0",
-        "@types/node": "^8.10.25",
-        "@types/mocha": "^2.2.42"
-    }
+        "snippets": [
+          {
+            "language": "javascriptreact",
+            "path": "./snippets/snippets.json"
+          },
+          {
+            "language": "javascript",
+            "path": "./snippets/snippets.json"
+          },
+          {
+            "language": "typescript",
+            "path": "./snippets/snippets.json"
+          },
+          {
+            "language": "typescriptreact",
+            "path": "./snippets/snippets.json"
+          }
+        ]
+      }
 }
