--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
     "name": "vscode-snippets-mobx-react",
-    "displayName": "Mobx React Snippets",
+    "displayName": "Mobx/Rematch React Snippets",
     "description": "a snipperts at mobx react",
-    "version": "0.1.0",
+    "version": "0.2.0",
     "publisher": "qingchong",
     "engines": {
         "vscode": "0.10.x"
