:rocket:   publish undefined: vnull

--- a/package.json
+++ b/package.json
@@ -1,38 +1,44 @@
 {
-    "name": "vscode-snippets-mobx-react",
-    "displayName": "Mobx/Rematch React Snippets",
-    "description": "a snipperts at mobx react",
-    "version": "0.2.0",
-    "publisher": "qingchong",
-    "engines": {
-        "vscode": "0.10.x"
-    },
-    "icon": "images/mobx_logon.png",
-    "categories": [
-        "Snippets"
-    ],
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/WebCaiQingChong/vscode-snippets-mobx-react"
-    },
-    "contributes": {
-        "snippets": [
-          {
-            "language": "javascriptreact",
-            "path": "./snippets/snippets.json"
-          },
-          {
-            "language": "javascript",
-            "path": "./snippets/snippets.json"
-          },
-          {
-            "language": "typescript",
-            "path": "./snippets/snippets.json"
-          },
-          {
-            "language": "typescriptreact",
-            "path": "./snippets/snippets.json"
-          }
-        ]
+  "name": "vscode-snippets-mobx-react",
+  "displayName": "Mobx/Rematch React Snippets",
+  "description": "a snipperts at mobx react",
+  "version": "0.2.0",
+  "publisher": "qingchong",
+  "engines": {
+    "vscode": "0.10.x"
+  },
+  "icon": "images/mobx_logon.png",
+  "categories": [
+    "Snippets"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/WebCaiQingChong/vscode-snippets-mobx-react"
+  },
+  "contributes": {
+    "snippets": [
+      {
+        "language": "javascriptreact",
+        "path": "./snippets/snippets.json"
+      },
+      {
+        "language": "javascript",
+        "path": "./snippets/snippets.json"
+      },
+      {
+        "language": "typescript",
+        "path": "./snippets/snippets.json"
+      },
+      {
+        "language": "typescriptreact",
+        "path": "./snippets/snippets.json"
       }
+    ]
+  },
+  "devDependencies": {
+    "chalk": "^2.4.1",
+    "inquirer": "^6.2.0",
+    "semver": "^5.6.0",
+    "shelljs": "^0.8.2"
+  }
 }
